Name:		wtk
Version:	0.1
License:	BSD3
License-file: license
Author:		Bartosz Wojcik
Maintainer:	Bartosz Wojcik
Copyright:  Copyright (c) 2012 Bartosz Wojcik
Category:	Tool Kit
Synopsis:	Wojcik Tool Kit
Stability:  experimental
Build-type:	Simple
Description: Set of simple tools.

Cabal-Version: >=1.2.3

library
  Build-Depends:	base, old-locale, time, transformers
  Exposed-Modules: ReadEither
                   Calculator
                   Text.PrettyShow
  Other-Modules: Text.WtkParser



